[package]
name = "query-bpf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libbpf-rs.workspace = true 
nix.workspace = true
clap = { version = "3.1", default-features = false, features = ["std", "derive"] }
