[workspace]

members = [
	"query-bpf",
	"hello-world",
	"hello_maps",
	"hello_ring",
	"hello_tail_call"
]

[workspace.dependencies]
libbpf-rs = "*"
libbpf-sys = "*"
nix = { version = "0.26", default-features = false, features = ["net", "user"] }
libbpf-cargo = "*"
log = "*"
env_logger = "*"
plain = "*"
const_format = "*"
